--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ body {
   background-image: url(./jake-noren-1220523-unsplash.jpg);
   background-size: cover;
   background-repeat: none;
-  min-height: 100vh;
+  min-height: 60vh;
   background-position-y: 70%;
 }
 
@@ -23,7 +23,8 @@ body {
 .search-bar {
   border-radius: 0px;
   font-family: 'Nunito Sans', sans-serif;
-  box-shadow: -3px 3px 2px black
+  box-shadow: -3px 3px 2px black;
+  min-width: 20em;
 }
 
 .search-bar-submit {
@@ -35,6 +36,10 @@ body {
 audio {
   max-width: 100%;
   max-height: 2em;
+}
+
+.results {
+  color: #edf4ed;
 }
 
 .song-album {
